2005-08-04  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/contour.c: CodeStyle cleanup (no superfluous pointer casts,
	sensible indentation).
	(contour): Logarithmize parameters of incremental
	contour specification to imitate the way other ticks on log axes
	behave.
	(edge_struct, poly_struct, cntr_struct): Typedef'd these structs,
	use typedef names all over the place to render source less wordy.

2005-08-03  Ethan Merritt  <merritt@u.washington.edu

	Move generation of html demo files into a separate subdirectory.

	* demo/html/index.save demo/html/gnuplot_demo.css:
	Template files for html pages.

	* demo/html/Makefile demo/html/webify.pl: Modify webify.pl to accept
	the "set term" parameters from environmental variable DEMOTERM. Create
	a separate Makefile just for generation of html pages.  Add special
	case terminal parameters for several demos.

	* demo/multiplt.dem: Add a missing "pause -1" command so that the
	webify script works properly.

2004-08-03  Lars Hecking  <lhecking@users.sourceforge.net>

	* docs/Makefile.in: Update CLEANFILES and clean-generic.

2005-08-03  Bastian Maerkisch  <bmaerkisch@web.de>

	* config/makefile.nt: Introduce variable OPTIONS for compile time
	switches like PM3D, USE_MOUSE etc. This makes addition of options
	easier.

	* src/win/winmain.c src/win/wcommon.h: Add new function GetDllVersion()
	which can determine the version of windows's shell and common control
	libraries. It is only included if WANT_GETDLLVERSION is defined.

	* src/win/wprinter.c src/win/wgraph.c src/win/wgnuplib.h
	src/win/wcommon.h: Rename struct PRINT to GP_PRINT due to name
	collision with windows shlobj.h header file.

2005-08-02  Petr Mikulik  <mikulik@physics.muni.cz>

	* config/config.mgw: Some more #(un)define for MingW >= 3.0.

2005-08-01  Ethan Merritt  <merritt@u.washington.edu

	* src/save.c (save_position): OK, so maybe we have to print out
	the full "offset ...." even if it specifies zero offset.
